--- a/8.4_ansible/8.4. ansible/playbook/vector-role/handlers/main.yml
+++ b/8.4_ansible/8.4. ansible/playbook/vector-role/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 # handlers file for vector-role
-- name: Start vector-role service
+- name: Start vector service
   become: true
   ansible.builtin.service:
-    name: vector-role
+    name: vector
     state: restarted
