--- a/8.4_ansible/8.4. ansible/playbook/vector-role/tasks/main.yml
+++ b/8.4_ansible/8.4. ansible/playbook/vector-role/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 # tasks file for vector-role
-- name: Get vector-role distrib
+- name: Get vector distrib
   ansible.builtin.get_url:
-    url: "https://packages.timber.io/vector-role/{{ vector_version }}/vector-role-{{ vector_version }}-1.x86_64.rpm"
-    dest: "./vector-role-{{ vector_version }}-1.x86_64.rpm"
-- name: Install vector-role packages
+    url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-1.x86_64.rpm"
+    dest: "./vector-{{ vector_version }}-1.x86_64.rpm"
+- name: Install vector packages
   become: true
   ansible.builtin.yum:
     name:
-      - vector-role-{{ vector_version }}-1.x86_64.rpm
-  notify: Start vector-role service
+      - vector-{{ vector_version }}-1.x86_64.rpm
+  notify: Start vector service
